Fix H1 font size on mobile.

--- a/bin/index.css
+++ b/bin/index.css
@@ -2377,10 +2377,13 @@ body {
   line-height: 1.5; }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
   text-transform: uppercase;
   font-family: "Oswald", sans-serif; }
+  @media (min-width: 544px) {
+    h1 {
+      font-size: 3rem; } }
 
 h2, h3, h4, h5, h6 {
   font-weight: bold;
