--- a/sass/vanilla.scss
+++ b/sass/vanilla.scss
@@ -7,10 +7,14 @@ body {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: bold;
     text-transform: uppercase;
     font-family: $font_charlie;
+
+    @include viewport-min('sm') {
+        font-size: 3rem;
+    }
 }
 
 h2, h3, h4, h5, h6 {
